Packaged pure extension files into dedicated ZIP and updated download link

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <p>Use this extension to display a subtle popup over standard Wikipedia links. With one click, you are directed to the concise, easy-to-read "Simple" version of that topic without breaking your focus. Happy reading.</p>
             </div>
             
-            <a href="https://github.com/strategosky/Simple-wiki-direct/archive/refs/heads/main.zip" class="install-btn">Download Archive</a>
+            <a href="https://github.com/strategosky/Simple-wiki-direct/raw/main/SimpleWikiDirect.zip" class="install-btn">Download Extension</a>
         </div>
 
         <div class="demo-container">
